# CrazyPawPals

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ContenidoDataBase.xlsx  Plan Pruebas.md  README.md  copy-resources.cmake  crazypawpals.sln
HTML/: index.html
HTML/css/: style.css
VSProject/crazypawpals/: crazypawpals.vcxproj
docs/: Architecture.gaphor  index.html
docs/css/: style.css
enc_temp_folder/9be486b24d5d6d9dd8ffc4e37a1d27/: transformless_dyn_image.h
project/crazypawpals/resources/config/: crazypawpals.resources.json  sdlutilsdemo.resources.json
project/src/: main.cpp
project/src/ecs/: Component.h  Entity.h  Manager.cpp  Manager.h  ecs.h
project/src/game/: ControlsScene.cpp  Game.cpp  Game.h  GameObject.h  GameScene.cpp  GameScene.h  GameStructs.h  MainMenuScene.cpp  MainMenuScene.h  RewardScene.cpp  RewardScene.h  Scene.cpp  Scene.h  SelectionMenuScene.cpp  SelectionMenuScene.h  ecs_defs.h
project/src/game/scenes/: ControlsScene.cpp  ControlsScene.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  MultiplayerMenu.cpp  MultiplayerMenu.h  MythicScene.cpp  MythicScene.h  RewardScene.cpp  RewardScene.h  Scene.cpp  Scene.h  SelectionMenuScene.cpp  SelectionMenuScene.h  TutorialScene.cpp  TutorialScene.h  VictoryScene.cpp  VictoryScene.h
project/src/json/: JSON.cpp
project/src/our_scripts/: BasicEnemy.cpp  BasicEnemy.h  BasicEnemyState.h  Bullet.cpp  Bullet.h  Container.h  DyingState.h  Enemy.cpp  Enemy.h  EnemyMovement.cpp  EnemyMovement.h  EnemyPoolManager.cpp  EnemyPoolManager.h  EnemyStateMachine.h  Game.cpp  Game.h  GameObject.h  InactiveState.h  KeyboardPlayerCtrl.cpp  KeyboardPlayerCtrl.h  MovementController.cpp  MovementController.h  NinjaWS.cpp  ObjectPool.h  PhysicsComponent.h  Player.cpp  Player.h  ShootComponent.cpp  ShootComponent.h  SimpleMove.cpp  StarsMngr.cpp  StarsMngr.h  StarsMngrWithPool.cpp  StarsMngrWithPool.h  WalkingState.h  WaveManager.cpp  WaveManager.h  log_writer_to_csv.hpp
project/src/our_scripts/card_system/: Card.cpp  Card.hpp  CardList.cpp  CardList.h  CardUpgrade.hpp  Deck.cpp  Deck.hpp  Mana.h  PlayableCards.cpp  PlayableCards.hpp  ShootPatrons.hpp
project/src/our_scripts/components/: AnimationComponent.cpp  AnimationComponent.h  BulletData.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Deck.cpp  Deck.hpp  EnemyMovement.cpp  EnemyMovement.h  EnemyStateMachine.cpp  EnemyStateMachine.h  Fog.cpp  Fog.h  GamePadPlayerCtrl.cpp  GamePadPlayerCtrl.hpp  GhostStateComponent.cpp  GhostStateComponent.h  HUD.cpp  HUD.h  Health.cpp  (+73 more)
project/src/physics/: collision.cpp  collision.hpp  integration.hpp  mass.hpp  rigidbody.hpp
project/src/rendering/: camera.cpp  camera.hpp  camera_follow.cpp  camera_follow.hpp  card_rendering.cpp  card_rendering.hpp  rect.hpp  units.hpp
project/src/sdlutils/: InputHandler.h  Music.h  SDLUtils.cpp  SDLUtils.h  Texture.cpp  Texture.h  VirtualTimer.h  sdlutils_demo.cpp
project/src/utils/: Button.cpp  Button.h  EventsSystem.hpp  Vector2D.h
(+100 files in other folders)
